2009-06-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/types_.py:
	Add necessary validation constraints to LTree type.

2009-06-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	* lib/pytis/data/types_.py:
	LTree type added.

2009-09-16  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	TODO added..

2009-09-15  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Allow autocompletion only for editable fields..

2009-09-12  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/search.py:
	Improved search dialog button tooltips.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix checking for system rights presence in the summary rights computation.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix invalid _update_rights call in e_pytis_role_members_trigger.

2009-09-11  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Web: Use `row-style' CSS class names also in list layout..

2009-09-11  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/field.py:
	Web: Don't generate table of contents at the top of StructuredText fields..

2009-09-10  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Fix clendar widget display after recent regression..

2009-09-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	* resources/scripts/pytis.js:
	Added support for radio buttons in web forms..

2009-09-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Ensure form id id a valid HTML identifier in web forms..

2009-09-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Pass type kwargs to the constructor of virtual field default type..

2009-09-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	* resources/scripts/pytis.js:
	AJAX response generation moved from Wiking adding support for runtime filters and few fixes..

2009-09-04  Tomas Cerha  <cerha@brailcom.org>
